...
                    <view key="view" contentMode="scaleToFill" id="HWO-Pe-68p">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumFontSize="16" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hQo-VA-YTa" userLabel="Result Display">
                                <rect key="frame" x="8" y="215.66666666666666" width="359" height="76.666666666666657"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultDisplay"/>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="64"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                                <variation key="heightClass=compact">
                                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                </variation>
...
                                <variation key="heightClass=compact">
                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="24"/>
                                </variation>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="right" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumFontSize="16" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3ub-6X-ajq" userLabel="History Display">
                                <rect key="frame" x="24" y="292.33333333333331" width="343" height="43"/>
                                <accessibility key="accessibilityConfiguration" identifier="historyDisplay"/>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="36"/>
                                <color key="textColor" red="0.65733506944444442" green="0.65733506944444442" blue="0.65733506944444442" alpha="1" colorSpace="calibratedRGB"/>
                                <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <variation key="heightClass=compact">
                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="24"/>
                                </variation>
...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="93.666666666666671"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tgI-UT-96u" customClass="BorderedButton" customModule="InfixCalculator" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="93.666666666666671" height="93.666666666666671"/>
                                                <color key="backgroundColor" white="0.88" alpha="1" colorSpace="calibratedWhite"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="36"/>
                                                <state key="normal" title="AC">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <variation key="heightClass=compact-widthClass=compact">
                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="28"/>
                                                </variation>
                                                <connections>
...
